force-app/main/default/objects/Credit_Note__c/fields/Deposit__c.field-meta.xml
<CustomField>
    <fullName>Deposit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Deposit</label>
    <referenceTo>Deposit__c</referenceTo>
    <relationshipLabel>Credit Notes</relationshipLabel>
    <relationshipName>Credit_Notes</relationshipName>
    <type>Lookup</type>
</CustomField>