force-app/main/default/objects/Credit_Note__c/fields/GST__c.field-meta.xml
<CustomField>
    <fullName>GST__c</fullName>
    <defaultValue>7/100</defaultValue>
    <label>GST</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>