force-app/main/default/objects/Credit_Note__c/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <label>Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Others</fullName>
            </value>
            <value>
                <fullName>Over Paid</fullName>
            </value>
            <value>
                <fullName>Withdrawn Course</fullName>
            </value>
            <value>
                <fullName>Invoice Refund</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>