force-app/main/default/objects/Credit_Note__c/fields/Total_Refund__c.field-meta.xml
<CustomField>
    <fullName>Total_Refund__c</fullName>
    <label>Total Refund</label>
    <summarizedField>Refund__c.Amount__c</summarizedField>
    <summaryForeignKey>Refund__c.Credit_Note__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>